tests/parser/valid/declarations/test_simple_fn.src
fn foo() -> void {
    return;
}

fn main() -> void {
    foo();
    return;
}