tests/parser/invalid/syntax_errors/test_invalid_if.src
if x > 0 { return x; }
if (x > 0 else { return x; }
if (x > 0) { return x } else { return -x }
if () { return x; }